--- a/debian/extended-volume-manager/DEBIAN/control
+++ b/debian/extended-volume-manager/DEBIAN/control
@@ -1,12 +1,11 @@
 Package: extended-volume-manager
-Version: 0.1
+Version: 0.2
 Architecture: all
 Maintainer: Discreete Linux Team <info@discreete-linux.org>
-Installed-Size: 155
-Depends: util-linux, python, python-notify, python-daemon, hamster-applet, rsync (>= 3.0), dosfstools, ntfs-3g, mtools, xterm, usb-imagewriter-ng, gir1.2-notify-0.7, exfat-utils
-Recommends: virtualbox | virtualbox-ose | virtualbox-4.1 | virtualbox-4.2 | virtualbox-4.3 | virtualbox-5.0 | virtualbox-5.1
-Suggests: fpm2
-Section: unknown
+Installed-Size: 156
+Depends: util-linux, python, python-daemon, hamster-applet, rsync (>= 3.0), dosfstools, ntfs-3g, tracker, mtools, xterm, usb-imagewriter-ng, gir1.2-notify-0.7, exfat-utils
+Suggests: fpm2, virtualbox | virtualbox-ose | virtualbox-4.1 | virtualbox-4.2 | virtualbox-4.3 | virtualbox-5.0 | virtualbox-5.1
+Section: utils
 Priority: optional
 Homepage: https://www.discreete-linux.org
 Description: Provides the functionality of "extended Volumes"
